# seiyuu-bot-backend

./: .env.example  .gitignore  pyproject.toml
src/: manage.py
src/account/: authentication.py  serializers.py  urls.py  views.py
src/core/: models.py  paginators.py  serializers.py  urls.py  utils.py  views.py
src/core/management/commands/: _post_handler.py  copy_data_from_old.sql  import_img.py  tweet_once.py
src/core/migrations/: 0001_initial.py
src/logs/: urls.py  views.py
src/lovelive_seiyuu_bot_backend/: asgi.py  settings.py  urls.py  wsgi.py
